# auteur-movie-director

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.test  Makefile  README-DOCKER.md  README.md  TEST_STATUS_REPORT.md  bmad_project_template.blend  dev.sh  docker-compose.core.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  logs.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  restart.sh  setup.cfg  start.sh  stop.sh
.bmad-core/: core-config.yml
.bmad-core/agents/: art-director-agent.md  (+11 more)
.claude/: settings.local.json
.clinerules/: blender-addon-core-team.md
backend/: .env.template  Dockerfile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-performance.txt  requirements.txt  simple_canvas_validation.py  test_canvas_performance.py  validate_production_canvas.py
backend/app/: __init__.py  config.py  main.py  redis_client.py
backend/app/api/: router.py  websocket.py
backend/app/api/endpoints/: health.py  health_monitor.py  queues.py  resources.py  system.py  template_validation.py  templates.py  upload.py  workers.py  workspace.py
backend/app/api/v1/: __init__.py  asset_operations.py  asset_propagation.py  assets.py  breakdown.py  collaboration.py  export.py  git.py  git_lfs.py  git_performance.py  import_.py  projects.py  quality.py  scene_breakdown.py  story.py  storyboard.py  table_read.py  takes.py
backend/app/cli/: __init__.py  resource_commands.py  template_commands.py
backend/app/core/: dependencies.py  dispatcher.py  exceptions.py
backend/app/error_handling/: README.md  __init__.py  analytics.py  api.py  circuit_breaker.py  classifier.py  compensation.py  context.py  integration.py  models.py  recovery.py  self_healing.py
backend/app/integration/: __init__.py  api.py  client.py  models.py  orchestrator.py  service_integrator.py  storage_integration.py  task_handler.py  websocket_integration.py
backend/app/middleware/: __init__.py  cors.py  errors.py  logging.py
backend/app/models/: asset_types.py  breakdown_models.py  generative_shotlist.py  storyboard_models.py  table_read_models.py  websocket.py
backend/app/performance/: __init__.py  analyzer.py  cicd.py  cli.py  dashboard.py  framework.py  generator.py  metrics.py  profiler.py  report.py  scenarios.py  types.py
backend/app/progress/: README.md  __init__.py  api.py  dependencies.py  eta_predictor.py  example_usage.py  integration.py  models.py  preview_generator.py  stage_manager.py  tracker.py  websocket_handler.py
backend/app/quality/: __init__.py  calculation.py  comparison.py  compatibility.py  exceptions.py  impact.py  models.py  presets.py  recommendation.py  storage.py
backend/app/resources/: __init__.py  exceptions.py  gpu_manager.py  mapper.py  models.py  monitor.py  quality_scaler.py
backend/app/schemas/: git.py  project.py  scene_breakdown.py  takes.py  templates.py  user.py
backend/app/services/: agent_integration.py  asset_operations.py  asset_propagation.py  asset_registry.py  assets.py  breakdown_service.py  dispatcher.py  export.py  git.py  git_lfs.py  git_performance.py  import_.py  quality_config_manager.py  quality_validator.py  scene_breakdown_service.py  script_parser.py  storage.py  story_service.py  storyboard_service.py  table_read_service.py  takes.py  thumbnails.py  websocket.py  workspace.py
backend/app/templates/: __init__.py  base.py  exceptions.py  registry.py  validation.py  validation_formatter.py  validation_pipeline.py
backend/app/worker/: __init__.py  autoscaler.py  celery_config.py  dead_letter_queue.py  health_monitor.py  metrics_collector.py  models.py  pool_manager.py  queue_monitor.py  queues.py  tasks.py
backend/migrations/: create_scene_breakdowns_table.sql
backend/templates/: image_generation.yaml
backend/tests/: test_agent_integration.py  test_asset_propagation.py  test_asset_system.py  test_breakdown.py  test_breakdown_simple.py  test_character_asset.py  test_error_handling.py  test_export.py  test_function_runner_foundation.py  test_generative_shotlist.py  test_git_lfs_service.py  test_git_performance.py  test_git_service.py  test_gpu_manager.py  test_health_monitoring.py  test_import_api.py  test_import_service.py  test_integration.py  test_integration_basic.py  test_integration_models.py  test_main.py  test_performance.py  test_performance_integration.py  test_progress_tracker.py  test_quality_config_manager.py  test_quality_preset_system.py  test_quality_scaler.py  test_queue_system.py  test_resource_mapper.py  test_story_021_takes_completion.py  test_story_025_project_scaffolding.py  test_story_026_git_integration.py  test_story_027_project_api_endpoints.py  test_story_027_simple.py  test_story_029_asset_api.py  test_story_029_asset_service.py  test_story_031_asset_operations.py  test_story_031_asset_operations_api.py  test_story_033_takes_integration.py  test_story_034_git_extensions.py  (+10 more)
backend/tests/integration/: conftest.py  test_project_flow.py
backend/tests/performance/: test_git_performance_load.py
blender_movie_director/: CLAUDE.md  __init__.py  __init__.py.backup  preferences.py
concept/: draft1.md  draft2.md  draft3.md  draft4_canvas.md  draft4_filestructure.md  draft4_svelte.md  draft5_models.md  draft5_refinement.md  draft6_review.md
docs/: ASSET_PROPAGATION_SYSTEM.md  DEVELOPMENT_ENVIRONMENT_IMPLEMENTATION.md  SETUP.md  backend-services.md
frontend/: .env.example  .env.template  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  README.md  package.json  svelte.config.js  vite.config.js
scripts/: CLAUDE.md  blender-python.sh  check-prerequisites.js  create-project.sh  create_project.py  dev-server.sh  init-model-storage.sh  package.sh  run-blender.sh  run-script.sh  services.sh  setup-deps.js  setup-env.js  setup.js  setup.sh  test-docker.sh  test-integration.sh  test.sh  validate-env.js
tests/: CLAUDE.md  MANUAL_TEST_CHECKLIST.md  README.md  __init__.py  conftest.py  manual_test_discovery.py
(+498 files in other folders)
